# vaarve

./: .env.example  .gitignore  README.md  price_history.csv  pyproject.toml  simulated_prices.csv  top_borrows.csv
src/vaarve/: main.py
src/vaarve/clients/: __init__.py
src/vaarve/clients/aave-api/: client.py
src/vaarve/clients/aave-api/queries/: __init__.py  markets.py  positions.py
src/vaarve/clients/coingecko/: client.py
src/vaarve/clients/the_graph/: client.py
src/vaarve/clients/the_graph/queries/: __init__.py  borrows.py  markets.py
src/vaarve/data/: price_history.csv  top_borrows.csv
src/vaarve/engine/bad_debt/: bad_debt.py
src/vaarve/engine/simulation/: simulator.py
src/vaarve/engine/var/: var.py
src/vaarve/engine/vol/: volatility.py
src/vaarve/fetcher/: __init__.py  price_fetcher.py  top_borrows.py  top_markets_fetcher.py
